Updated dependency of diagram-as-code.js. Set jvmArgs for performance.